# SWA_UnitTest

./: CMakeLists.txt  README.md  main.cpp
Tests/: ClassName.h  test.cpp
